--- a/index.html
+++ b/index.html
@@ -302,7 +302,88 @@
 
     </section>
 
+    <section class="blogs" id="blogs">
+        <h1 class="heading">Our <span>Blogs</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="image/blog-1.jpg" alt="">
+                <div class="content">
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i>1st may,2022</a>
+                    </div>
+                    <h3>Fresh and organic Vegitables and frutes</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est aut numquam vero facere aliquid!</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/blog-2.jpg" alt="">
+                <div class="content">
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i>1st may,2022</a>
+                    </div>
+                    <h3>Fresh and organic Vegitables and frutes</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est aut numquam vero facere aliquid!</p>
+                    <a href="#" class="btn">read more</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="image/blog-3.jpg" alt="">
+                <div class="content">
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i>1st may,2022</a>
+                    </div>
+                    <h3>Fresh and organic Vegitables and frutes</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae est aut numquam vero facere aliquid!</p>
+                    <a href="" class="btn">read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
+
+<footer class="footer">
+    <!-- <h3></h3> -->
+    <div class="box-container">
+        <div class="box">
+            <h3>groco <i class="fas fa-shopping-basket"></i></h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque nemo non distinctio placeat voluptates quas!</p>
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+            </div>
+        </div>
+        <div class="box">
+            <h3>contact Info</h3>
+            <a href="#" class="links"><i class="fas fa-phone"></i>+216 58404545</a>
+            <a href="#" class="links"><i class="fas fa-phone"></i>+216 94927410</a>
+            <a href="#" class="links"><i class="fas fa-envelope"></i>idriss.haddad@enicar.ucar.tn</a>
+            <a href="#" class="links"><i class="fa fa-map-marker"></i>Bizerte, Tunisia 7003</a>
+        </div>
+        <div class="box">
+            <h3>Quick Links</h3>
+            <a href="#home" class="links"><i class="fas fa-arrow-right"></i>home</a>
+            <a href="#features" class="links"><i class="fas fa-arrow-right"></i>features</a>
+            <a href="#products" class="links"><i class="fas fa-arrow-right"></i>products</a>
+            <a href="#categories" class="links"><i class="fas fa-arrow-right"></i>categories</a>
+            <a href="#blogs" class="links"><i class="fas fa-arrow-right"></i>blogs</a>
+           
+        </div>
+        <div class="box">
+            <h3>Newsletter</h3>
+            <p>subscribe for latest updates</p>
+            <input type="email" name="" id="" class="email" placeholder="your mail">
+            <input type="submit" value="subscribe" class="btn">
+            <img src="image/payment.png" class="payment-img" alt="">
+        </div>
+    </div>
+</footer>
 </html>
