added alot of things

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         <a href="#" class="logo"><i class="fas fa-shopping-basket"></i> GROCO</a>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#features">Features</a>
-            <a href="#products">Products</a>
-            <a href="#categories">Categories</a>
-            <a href="#review">Review</a>
-            <a href="#blogs">Blogs</a>
-        </nav>
+            <a href="index.html">Home</a>
+            <a href="index.html#features">Features</a>
+            <a href="index.html#products">Products</a>
+            <a href="index.html#categories">Categories</a>
+            <a href="index.html#review">Review</a>
+            <a href="index.html#blogs">Blogs</a>
+            <a href="contact.html">Contact</a>
+          </nav>
 
         <div class="icons">
             <div class="fas fa-bars" id="menu-btn"></div>
@@ -80,7 +81,7 @@
             <input type="email" name="" id="" class="box" placeholder="your email">
             <input type="password" name="" id="" class="box" placeholder="password">
             <p>forgot password ?<a href="#"class="links"> click here</a></p>
-            <p>Don't have account ?<a href="#" class="links"> click here</a></p>
+            <p>Don't have account ?<a href="login.html" class="links"> click here</a></p>
             <input type="submit" value="login now" class="btn">
         </form>
     </header>
