--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
       <a href="index.html#categories">Categories</a>
       <a href="index.html#review">Review</a>
       <a href="index.html#blogs">Blogs</a>
+      <a href="index.html#contact">Contact</a>
     </nav>
 
     <div class="icons">
