--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
         <a href="#" class="logo"><i class="fas fa-shopping-basket"></i> GROCO</a>
 
         <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="index.html#features">Features</a>
-            <a href="index.html#products">Products</a>
-            <a href="index.html#categories">Categories</a>
-            <a href="index.html#review">Review</a>
-            <a href="index.html#blogs">Blogs</a>
-            <a href="contact.html">Contact</a>
-          </nav>
+            <a href="#home">Home</a>
+            <a href="#features">Features</a>
+            <a href="#products">Products</a>
+            <a href="#categories">Categories</a>
+            <a href="#review">Review</a>
+            <a href="#blogs">Blogs</a>
+        </nav>
 
         <div class="icons">
             <div class="fas fa-bars" id="menu-btn"></div>
@@ -282,26 +281,79 @@
         </div>
     </section>
 
-    <section class="review" id="review"> 
+    <section class="review" id="review">
         <h1 class="heading">Customer's <span>Reviews</span></h1>
         <div class="review-container">
-            <div class="review-box">
-                <img src= "image\pic-1.png">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates veritatis optio? Aut, laborum? Nesciunt blanditiis tempore consectetur repellat harum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, natus</p>
-                <p class="name">John Doe</p>
-                <div class="star">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
+            <button class="nav-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
+            <div class="review-slider">
+                <div class="review-box">
+                    <img src="image/pic-1.png" alt="Customer 1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptates veritatis optio? Aut, laborum? Nesciunt blanditiis tempore consectetur repellat harum.</p>
+                    <p class="name">John Doe</p>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
                 </div>
-
-
+                <div class="review-box">
+                    <img src="image/pic-2.png" alt="Customer 2">
+                    <p>Consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <p class="name">Jane Smith</p>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+                <div class="review-box">
+                    <img src="image/pic-3.png" alt="Customer 3">
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="name">Alice Johnson</p>
+                    <div class="star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
             </div>
+            <button class="nav-btn next-btn"><i class="fas fa-chevron-right"></i></button>
         </div>
-
     </section>
+    <script>
+        const slider = document.querySelector('.review-slider');
+        const prevBtn = document.querySelector('.prev-btn');
+        const nextBtn = document.querySelector('.next-btn');
+        let currentIndex = 0;
+        const totalReviews = 3;
+        const slideWidth = 100 / totalReviews;
+
+        function updateSlider() {
+            slider.style.transform = `translateX(-${currentIndex * slideWidth}%)`;
+        }
+
+        nextBtn.addEventListener('click', () => {
+            currentIndex = (currentIndex + 1) % totalReviews;
+            updateSlider();
+        });
+
+        prevBtn.addEventListener('click', () => {
+            currentIndex = (currentIndex - 1 + totalReviews) % totalReviews;
+            updateSlider();
+        });
+
+        // Optional auto-slide
+        setInterval(() => {
+            currentIndex = (currentIndex + 1) % totalReviews;
+            updateSlider();
+        }, 5000);
+    </script>
 
     <section class="blogs" id="blogs">
         <h1 class="heading">Our <span>Blogs</span></h1>
